# pardus-power-manager

./: .gitignore  Makefile  Readme.md  meson.build  meson_options.txt  pardus-power-manager  pardus-power-manager.pot  setup.py  update-translation.sh  update-translations.sh
client/: MainWindow.py  MainWindow.ui  cli.py  indicator.py  main.py  settings.py  util.py
common/: asyncfunc.py  common.py  config.py  detect.py  file.py  gpu.py  logging.py  power.py  user.py
data/: 90-ppm-brightness.rules  MainWindow.ui  MainWindow.ui~  config.ini  ppm-autostart.desktop  ppm-cli.sh  ppm-client.desktop  ppm-libexec.sh  ppm-service.sh  ppm-settings.desktop  ppm-trigger.sh  ppm.desktop  ppm.openrc  ppm.policy  ppm.systemd  ppm.sysvinit  style.css  tr.org.pardus.pkexec.pardus-power-manager.policy  tr.org.pardus.power-manager-autostart.desktop  tr.org.pardus.power-manager.desktop
debian/: changelog  control  copyright  debhelper-build-stamp  files  pardus-power-manager.postrm.debhelper  postinst  preinst  preinst (copy)  rules
po/: POTFILES  files  pardus-power-manager.pot  pt.po  tr.po
service/: backlight.py  main.py  power.py  service.py  test.json  util.py
service/backends/: backlight.py  battery.py  cpu.py  gpu.py  power.py
settings/: control.py  main.py  reboot_dialog.py
src/: Brightness.py  Main.py  MainWindow.py  Notification.py  Readme.rst  UserSettings.py  Utils.py
src/client/: MainWindow.py  actions.py  cli.py  indicator.py  main.py  util.py
src/common/: asyncfunc.py  cache.py  config.py  control.py  detect.py  file.py  misc.py  power.py
src/service/: main.py  service.py  test.json  util.py
src/service/backends/: backlight.py  battery.py  cpu.py  power.py  wakeup.py
src/settings/: main.py
src/udev-trigger/: main.py
udev-trigger/: main.py  ppm.rule  trigger.py  util.py
ui/: MainWindow.glade
